<resources>
    <string name="app_name">Material Design Template</string>

    <string name="toolbar_title">Material Design</string>

    <string name="action_settings">Settings</string>

    <string name="main_activity_name">What is your name?</string>
    <string name="main_activity_age">What is your age?</string>
    <string name="main_activity_position">What is your preferred position?</string>
    <string name="main_activity_past_teams">Previous teams?</string>
    <string name="main_activity_favourite_food">Favourite food?</string>
    <string name="main_activity_favourite_drink">Favourite drink?</string>
    <string name="main_activity_favourite_movie">Favourite movie?</string>
</resources>