<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.methodia.android.testautomation.Activity.MaterialActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/appbar_height"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_green_dark"
                    app:expandedTitleMarginStart="@dimen/appbar_title_start_margin"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
                    <!-- app:contentScrim="@android:color/holo_green_dark" -->

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rugby"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.83" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:minHeight="?attr/actionBarSize"
                        app:layout_collapseMode="pin" />

                    <!-- Comment out the TabLayout
                    <android.support.design.widget.TabLayout
                        android:id="@+id/tabLayout"
                        app:tabIndicatorHeight="@dimen/tab_bar_indicator_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                        app:tabGravity="fill"
                        app:tabIndicatorColor="@android:color/holo_green_light"
                        app:tabMode="fixed"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
                    -->
                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_name" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputName"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin"
                        android:rotationX="30">

                        <EditText
                            android:id="@+id/editTextAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_age"
                            android:inputType="numberSigned" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputPosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputAge"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextPosition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_position"
                            android:inputType="numberSigned" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputPastTeams"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputPosition"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextPastTeams"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_past_teams"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputFavouriteFood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputPastTeams"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextFavouriteFood"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_favourite_food"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputFavouriteDrink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputFavouriteFood"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextFavouriteDrink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_favourite_drink"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputFavouriteMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textInputFavouriteDrink"
                        android:layout_marginTop="@dimen/main_activity_form_top_margin">

                        <EditText
                            android:id="@+id/editTextFavouriteMovie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/main_activity_favourite_movie"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="@dimen/fab_margin_bottom"
                android:layout_marginRight="@dimen/fab_margin_right"
                android:src="@drawable/ic_plus"
                app:backgroundTint="@android:color/holo_green_dark"
                app:borderWidth="0dp"
                app:rippleColor="@android:color/white" />

        </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="#333"
        app:itemTextColor="#333"
        app:menu="@menu/drawer_items" />

</android.support.v4.widget.DrawerLayout>
